feat: CIP-1853 stake pool cold keys
